--- a/UIT-CodeGym/MVVM/Views/PopupLoginForm.xaml
+++ b/UIT-CodeGym/MVVM/Views/PopupLoginForm.xaml
@@ -47,7 +47,7 @@
                 Text="{Binding Password}"
                 TextColor="Black"
                 VerticalOptions="FillAndExpand" />
-            <HorizontalStackLayout Margin="0,0,0,100" HorizontalOptions="Start">
+            <HorizontalStackLayout Margin="0,0,0,20" HorizontalOptions="Start">
                 <CheckBox Margin="60,0,0,0" IsChecked="False" />
                 <Label
                     Margin="0,10,0,0"
@@ -65,6 +65,23 @@
                     TextColor="Black" />
 
             </HorizontalStackLayout>
+            <Button
+                Margin="60,10,20,20"
+                HeightRequest="50"
+                HorizontalOptions="Start"
+                WidthRequest="200">
+                <Button.Text>Sign in</Button.Text>
+                <Button.TextColor>White</Button.TextColor>
+                <Button.FontSize>24</Button.FontSize>
+                <Button.FontFamily>RalewaySemiBold</Button.FontFamily>
+                <Button.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
+                        <GradientStop Offset="0.0" Color="#7B90D7" />
+                        <GradientStop Offset="1.0" Color="#FFA9DD" />
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
+
         </StackLayout>
 
         <StackLayout Grid.Column="1">
