About + Popup page

--- a/UIT-CodeGym/MVVM/Views/AboutPage.xaml
+++ b/UIT-CodeGym/MVVM/Views/AboutPage.xaml
@@ -1,12 +1,259 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="UIT_CodeGym.MVVM.Views.AboutPage"
-             Title="AboutPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+<ContentPage
+    x:Class="UIT_CodeGym.MVVM.Views.AboutPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Title="AboutPage">
+
+    <ScrollView>
+        <Grid>
+            <Grid.Background>
+                <LinearGradientBrush StartPoint="0,1" EndPoint="0,0">
+                    <GradientStop Offset="0.0" Color="#7E7CD1" />
+                    <GradientStop Offset="1.0" Color="#F2CDEF" />
+                </LinearGradientBrush>
+            </Grid.Background>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+
+            </Grid.RowDefinitions>
+            <VerticalStackLayout HorizontalOptions="FillAndExpand">
+                <HorizontalStackLayout>
+                    <Label
+                        Margin="20"
+                        FontFamily="RalewayExtraBold"
+                        FontSize="50"
+                        HorizontalTextAlignment="Start"
+                        SemanticProperties.HeadingLevel="Level1"
+                        Text="UITCodeGym"
+                        TextColor="#05299E" />
+                    <Button
+                        Margin="0,0,0,0"
+                        Background="Transparent"
+                        HorizontalOptions="End"
+                        Text="Test">
+                        <Button.FontSize>30</Button.FontSize>
+                        <Button.TextColor>Black</Button.TextColor>
+                        <Button.FontFamily>Raleway</Button.FontFamily>
+                    </Button>
+                    <Button
+                        Margin="0,0,0,0"
+                        Background="Transparent"
+                        HorizontalOptions="End"
+                        Text="Forum">
+                        <Button.FontSize>30</Button.FontSize>
+                        <Button.TextColor>Black</Button.TextColor>
+
+                        <Button.FontFamily>Raleway</Button.FontFamily>
+                    </Button>
+                    <Button
+                        Margin="0,0,0,0"
+                        Background="Transparent"
+                        CornerRadius="15"
+                        HorizontalOptions="End"
+                        Text="About">
+                        <Button.FontSize>30</Button.FontSize>
+                        <Button.TextColor>Black</Button.TextColor>
+                        <Button.FontFamily>Raleway</Button.FontFamily>
+                    </Button>
+                    <ImageButton
+                        Background="Transparent"
+                        HeightRequest="50"
+                        Source="user.png"
+                        WidthRequest="50" />
+
+                    <Button
+                        Margin="0,0,0,0"
+                        Background="Transparent"
+                        HorizontalOptions="End"
+                        Text="Log out">
+                        <Button.FontSize>30</Button.FontSize>
+                        <Button.TextColor>Black</Button.TextColor>
+                        <Button.FontFamily>Raleway</Button.FontFamily>
+                    </Button>
+
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout HorizontalOptions="CenterAndExpand" WidthRequest="-1">
+                    <Image
+                        Margin="20,0,0,0"
+                        HeightRequest="600"
+                        HorizontalOptions="Center"
+                        Source="online_learning.png"
+                        WidthRequest="600" />
+                    <VerticalStackLayout Margin="0,100,0,0" HorizontalOptions="Center">
+                        <Label
+                            Margin="20"
+                            FontFamily="RalewayBold"
+                            FontSize="50"
+                            SemanticProperties.HeadingLevel="Level1"
+                            Text="We envision a world where anyone,"
+                            TextColor="Black"
+                            VerticalTextAlignment="Center" />
+                        <Label
+                            Margin="110,20,20,20"
+                            FontFamily="RalewayBold"
+                            FontSize="50"
+                            SemanticProperties.HeadingLevel="Level1"
+                            Text="anywhere has the power to"
+                            TextColor="Black"
+                            VerticalOptions="Center" />
+                        <Label
+                            Margin="190,20,20,20"
+                            FontFamily="RalewayBold"
+                            FontSize="50"
+                            SemanticProperties.HeadingLevel="Level1"
+                            Text="transform their lives"
+                            TextColor="Black" />
+                        <Label
+                            Margin="220,20,20,20"
+                            FontFamily="RalewayBold"
+                            FontSize="50"
+                            SemanticProperties.HeadingLevel="Level1"
+                            Text="through learning."
+                            TextColor="Black" />
+                    </VerticalStackLayout>
+
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout
+                    Margin="100,50,0,0"
+                    HorizontalOptions="Start"
+                    WidthRequest="-1">
+
+                    <VerticalStackLayout
+                        Margin="0,100,0,0"
+                        HorizontalOptions="Start"
+                        VerticalOptions="Start">
+                        <Label
+                            Margin="0,0,0,30"
+                            FontFamily="RalewaySemiBold"
+                            FontSize="40"
+                            HorizontalOptions="Start"
+                            SemanticProperties.HeadingLevel="Level1"
+                            Text="Our story,"
+                            TextColor="Black" />
+                        <Label
+                            Margin="0,20,0,0"
+                            FontFamily="RalewayRegular"
+                            FontSize="32"
+                            HorizontalOptions="Start"
+                            SemanticProperties.HeadingLevel="Level1"
+                            Text="UITCodeGym was established in October 2023 by TMTTeam. Our"
+                            TextColor="Black" />
+                        <Label
+                            Margin="0,10,0,0"
+                            FontFamily="RalewayRegular"
+                            FontSize="32"
+                            HorizontalOptions="Start"
+                            SemanticProperties.HeadingLevel="Level1"
+                            Text="mission is to provide a useful platform to help UIT students"
+                            TextColor="Black" />
+                        <Label
+                            Margin="0,10,0,0"
+                            FontFamily="RalewayRegular"
+                            FontSize="32"
+                            HorizontalOptions="Start"
+                            SemanticProperties.HeadingLevel="Level1"
+                            Text="practice and prepare effectively for the school's programming"
+                            TextColor="Black" />
+                        <Label
+                            Margin="0,10,0,0"
+                            FontFamily="RalewayRegular"
+                            FontSize="32"
+                            HorizontalOptions="Start"
+                            SemanticProperties.HeadingLevel="Level1"
+                            Text="competency assessment. As of today, the platform has been"
+                            TextColor="Black" />
+                        <Label
+                            Margin="0,10,0,0"
+                            FontFamily="RalewayRegular"
+                            FontSize="32"
+                            HorizontalOptions="Start"
+                            SemanticProperties.HeadingLevel="Level1"
+                            Text="widely adopted by new students and is highly praised for its "
+                            TextColor="Black" />
+                        <Label
+                            Margin="0,10,0,0"
+                            FontFamily="RalewayRegular"
+                            FontSize="32"
+                            HorizontalOptions="Start"
+                            SemanticProperties.HeadingLevel="Level1"
+                            Text="usefulness and convenience. We will strive to further develop the"
+                            TextColor="Black" />
+                        <Label
+                            Margin="0,10,0,0"
+                            FontFamily="RalewayRegular"
+                            FontSize="32"
+                            HorizontalOptions="Start"
+                            SemanticProperties.HeadingLevel="Level1"
+                            Text="platform with more features and increased convenience in the."
+                            TextColor="Black" />
+                        <Label
+                            Margin="0,10,0,0"
+                            FontFamily="RalewayRegular"
+                            FontSize="32"
+                            HorizontalOptions="Start"
+                            SemanticProperties.HeadingLevel="Level1"
+                            Text="future."
+                            TextColor="Black" />
+                    </VerticalStackLayout>
+                    <Image
+                        HeightRequest="500"
+                        HorizontalOptions="End"
+                        Source="ask.png"
+                        WidthRequest="500" />
+
+
+
+                </HorizontalStackLayout>
+                <VerticalStackLayout
+                    Margin="0,200,0,50"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center">
+
+                    <Label
+                        FontFamily="RalewayBold"
+                        FontSize="20"
+                        HorizontalTextAlignment="Center"
+                        SemanticProperties.HeadingLevel="Level1"
+                        Text="PHÒNG ĐÀO TẠO ĐẠI HỌC"
+                        TextColor="Black" />
+                    <Label
+                        FontFamily="RalewayRegular"
+                        FontSize="15"
+                        HorizontalTextAlignment="Center"
+                        SemanticProperties.HeadingLevel="Level1"
+                        Text="Phòng A120, Trường Đại học Công nghệ Thông tin."
+                        TextColor="Black" />
+                    <Label
+                        FontFamily="RalewayRegular"
+                        FontSize="15"
+                        HorizontalTextAlignment="Center"
+                        SemanticProperties.HeadingLevel="Level1"
+                        Text="Khu phố 6, P.Linh Trung, Tp.Thủ Đức, Tp.Hồ Chí Minh."
+                        TextColor="Black" />
+                    <Label
+                        FontFamily="RalewayRegular"
+                        FontSize="15"
+                        HorizontalTextAlignment="Center"
+                        SemanticProperties.HeadingLevel="Level1"
+                        Text="Điện thoại: (028) 372 51993, Ext: 113(Hệ từ xa qua mạng), 112(Hệ chính quy)."
+                        TextColor="Black" />
+                    <Label
+                        FontFamily="RalewayRegular"
+                        FontSize="15"
+                        HorizontalTextAlignment="Center"
+                        SemanticProperties.HeadingLevel="Level1"
+                        Text="Email: phongdaotaodh@uit.edu.vn"
+                        TextColor="Black" />
+
+
+                </VerticalStackLayout>
+
+            </VerticalStackLayout>
+        </Grid>
+    </ScrollView>
+
 </ContentPage>
